--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,15 @@ body {
   height: auto !important;
   aspect-ratio: 16/9;
 }
+
+.tooltip {
+  @apply invisible absolute right-0 bottom-0;
+}
+
+.has-tooltip:hover .tooltip {
+  @apply visible z-50;
+}
+
+.has-tooltip {
+  @apply relative;
+}
